@@ -1,0 +1,7 @@
+This is a simple thread and command test program.
+
+Currently supported configuration(s):
+Linux:
+  None
+ELK:
+  arm-elk-engeabi
