@@ -1,0 +1,10 @@
+/* Choose elk features to pull in. */
+
+EXTERN(__elk_simple_console)
+/* EXTERN(__elk_console) */
+/* EXTERN(__elk_simple_memman) */
+/* EXTERN(__elk_command) */
+/* EXTERN(__elk_thread) */
+/* EXTERN(__elk_timer) */
+/* EXTERN(__elk_test_commands) */
+
