@@ -1,0 +1,34 @@
+based_on: x86_64-ellcc-linux
+compiler:
+  options:
+    - -target x86_64-ellcc-linux
+    - -fprofile-instr-generate
+    - -fcoverage-mapping
+  c_include_dirs:
+    - '$R/src/elk/sys/x86_64'   # Grab hidden files in the source tree.
+    - '$R/src/elk/sys'
+    - '$R/include/elk'
+    - '$R/include/x86_64'
+    - '$R/include'
+linker:
+  options:
+    - -m elf_x86_64
+    - --build-id
+    - --hash-style=gnu
+    - --eh-frame-hdr
+    - -u__cstart
+    - elkconfig.ld
+  static_crt1: "" # $R/lib/x86_64-linux-eng/crt1.o
+  dynamic_crt1: $R/lib/x86_64-linux-eng/Scrt1.o
+  crtbegin: $R/lib/x86_64-linux-eng/crtbegin.o
+  crtend: $R/lib/x86_64-linux-eng/crtend.o
+  library_paths:
+    - -L$R/lib/x86_64-elklinux-eng
+    - -L$R/lib/elk
+    - -L$R/lib/x86_64-linux-eng
+  c_libraries:
+    - -lelk
+    - '-('
+    - -lc
+    - -lcompiler_rt
+    - '-)'
